data/forge_javadoc/1.7.10/raw/net/minecraft/entity/monster/EntityWitch.md
---
title: "EntityWitch"
description: "public class EntityWitch extends EntityMob implements IRangedAttackMob"
package: "net/minecraft/entity/monster"
version: "1.7.10"
forgeBuild: "10.13.4.1614"
fetchedWith: "c4-2026-09-22"
source: "https://skmedix.github.io/ForgeJavaDocs/javadoc/forge/1.7.10-10.13.4.1614/net/minecraft/entity/monster/EntityWitch.html"
sourceType: javadoc
---

# EntityWitch

**Inheritance:** java.lang.Object → net.minecraft.entity.Entity → net.minecraft.entity.EntityLivingBase → net.minecraft.entity.EntityLiving → net.minecraft.entity.EntityCreature → net.minecraft.entity.monster.EntityMob → net.minecraft.entity.monster.EntityWitch

## Class signature

```java
public class EntityWitch extends EntityMob implements IRangedAttackMob
```

## Methods

- `protected void applyEntityAttributes()`
- `protected float applyPotionDamageCalculations(DamageSource p_70672_1_, float p_70672_2_)`
- `void attackEntityWithRangedAttack(EntityLivingBase p_82196_1_, float p_82196_2_)`
- `protected void dropFewItems(boolean p_70628_1_, int p_70628_2_)`
- `protected void entityInit()`
- `boolean getAggressive()`
- `protected java.lang.String getDeathSound()`
- `protected java.lang.String getHurtSound()`
- `protected java.lang.String getLivingSound()`
- `void handleHealthUpdate(byte p_70103_1_)`
- `boolean isAIEnabled()`
- `void onLivingUpdate()`
- `void setAggressive(boolean p_82197_1_)`

## Fields

- `EntityWitch`
